[package]
name = "ibm437"
description = "The IBM437 font for uses with the embedded-graphics crate."
version = "0.1.3"
authors = ["Sebastien Bechet <sebastien.bechet@osinix.com>"]
edition = "2018"

documentation = "https://docs.rs/ibm437"
repository = "https://github.com/sbechet/ibm437"

readme = "README.md"
license = "MIT"

keywords = ["bitmap", "monochrome", "font", "monospace"]
categories = ["rendering", "embedded", "no-std"]

[[bench]]
name = "char_offset"
harness = false

[dependencies]
embedded-graphics = "0.6"

[dev-dependencies]
criterion = "0.3.3"

