[package]
name = "ibm437"
description = "The IBM437 font for uses with the embedded-graphics crate."
version = "0.2.1"
authors = ["Sebastien Bechet <sebastien.bechet@free.fr>"]
edition = "2021"
build = "src/build.rs"

documentation = "https://docs.rs/ibm437"
repository = "https://github.com/sbechet/ibm437"

readme = "README.md"
license = "MIT"

keywords = ["bitmap", "monochrome", "font", "monospace"]
categories = ["rendering", "embedded", "no-std"]

[[bench]]
name = "bench_mapping"
harness = false

[build-dependencies]
bitvec = "0.22"
png = "0.17"

[dependencies]
embedded-graphics = "0.7"

[dev-dependencies]
criterion = "0.3"
embedded-graphics-simulator = "0.3"

